# rec-mlops

./: .flake8  .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements-minimal.txt  requirements.txt
mlflow_artifacts/1/models/m-0035dd27f63e4b7183df5cc28aa6607a/artifacts/: MLmodel  model.pkl
mlflow_artifacts/1/models/m-15710c60ea484143b400231fb8725a45/artifacts/: MLmodel
mlflow_artifacts/1/models/m-3d836c2f61c1471b81a41801264181db/artifacts/: MLmodel  model.pkl
mlflow_artifacts/1/models/m-7c22fa7f092949a6ba7f91bb86aea898/artifacts/: MLmodel
mlflow_artifacts/1/models/m-c06f198a269143d8af9e28d121e9bfba/artifacts/: MLmodel  model.pkl
mlflow_artifacts/1/models/m-c99d466667d44254a57b0cf29a7eff47/artifacts/: MLmodel
mlflow_artifacts/1/models/m-ff58a36c47f34edba98f64ebd311150d/artifacts/: MLmodel  model.pkl
src/: __init.py  init_delta_tables.py
src/api/: recommendation_api.py
src/experiments/: ab_testing.py
src/models/: recommendation_engine.py  train_models.py
src/pipelines/: retraining_flow.py  tasks.py
src/streaming/: __init__.py  feature_processor.py  kafka_producer.py
src/utils/: __init__.py  cache.py  metrics.py
tests/: conftest.py  locustfile.py
tests/integration/: __init__.py
tests/unit/: test_api.py  test_cache.py  test_metrics.py  test_models.py
